# rules_nodejs_example_svelte

./: BUILD.bazel  README.md  WORKSPACE  bench.sh  package-lock.json  package.json  webpack.config.js
src/: App.svelte  bust.js  bust2.js  main.js
tools/: bazel_deps.bzl
